Session 8 is done

--- a/05_FirstStepInJava/rest-with-spring-boot-and-java-erudio/src/main/resources/application.yml
+++ b/05_FirstStepInJava/rest-with-spring-boot-and-java-erudio/src/main/resources/application.yml
@@ -1,3 +1,16 @@
-
+spring:
+  profiles:
+    active: development
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/new_database
+    username: root
+    password: Hidel@123
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      show-sql: false
+    open-in-view: false
 server:
-  port: 3333
+ port: 3333
