--- a/05_FirstStepInJava/rest-with-spring-boot-and-java-erudio/pom.xml
+++ b/05_FirstStepInJava/rest-with-spring-boot-and-java-erudio/pom.xml
@@ -32,6 +32,12 @@
 		    <version>8.0.33</version> <!-- Use a versão mais recente disponível -->
 		    <scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+		  <groupId>org.modelmapper</groupId>
+		  <artifactId>modelmapper</artifactId>
+		  <version>3.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
