session11 is successfully done

--- a/05_FirstStepInJava/rest-with-spring-boot-and-java-erudio/src/main/resources/application.yml
+++ b/05_FirstStepInJava/rest-with-spring-boot-and-java-erudio/src/main/resources/application.yml
@@ -3,14 +3,17 @@ spring:
     active: development
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/new_database
+    url: jdbc:mysql://localhost:3306/new_database?useTimezone=true&serverTimezone=UTC&useSSL=false
     username: root
     password: Hidel@123
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       show-sql: false
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
     open-in-view: false
+      
 server:
  port: 3333
